@@ -7,7 +7,6 @@ import java.nio.file.FileVisitOption;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
@@ -36,7 +35,8 @@ import stirling.software.SPDF.model.PipelineResult;
 import stirling.software.SPDF.service.ApiDocService;
 import stirling.software.common.configuration.RuntimePathConfig;
 import stirling.software.common.service.PostHogService;
-import stirling.software.common.util.FileMonitor;
+import stirling.software.common.service.ToolMetadataService;
+import stirling.software.common.util.FileReadinessChecker;
 
 import tools.jackson.databind.ObjectMapper;
 
@@ -49,9 +49,10 @@ public class PipelineDirectoryProcessor {
 
     private final ObjectMapper objectMapper;
     private final ApiDocService apiDocService;
+    private final ToolMetadataService toolMetadataService;
     private final PipelineProcessor processor;
-    private final FileMonitor fileMonitor;
     private final PostHogService postHogService;
+    private final FileReadinessChecker fileReadinessChecker;
     private final List<String> watchedFoldersDirs;
     private final String finishedFoldersDir;
 
@@ -62,15 +63,17 @@ public class PipelineDirectoryProcessor {
     public PipelineDirectoryProcessor(
             ObjectMapper objectMapper,
             ApiDocService apiDocService,
+            ToolMetadataService toolMetadataService,
             PipelineProcessor processor,
-            FileMonitor fileMonitor,
             PostHogService postHogService,
+            FileReadinessChecker fileReadinessChecker,
             RuntimePathConfig runtimePathConfig) {
         this.objectMapper = objectMapper;
         this.apiDocService = apiDocService;
+        this.toolMetadataService = toolMetadataService;
         this.processor = processor;
-        this.fileMonitor = fileMonitor;
         this.postHogService = postHogService;
+        this.fileReadinessChecker = fileReadinessChecker;
         this.watchedFoldersDirs = runtimePathConfig.getPipelineWatchedFoldersPaths();
         this.finishedFoldersDir = runtimePathConfig.getPipelineFinishedFoldersPath();
     }
@@ -82,7 +85,7 @@ public class PipelineDirectoryProcessor {
 
         try {
             for (String watchedFoldersDir : watchedFoldersDirs) {
-                scanWatchedFolder(Paths.get(watchedFoldersDir).toAbsolutePath());
+                scanWatchedFolder(Path.of(watchedFoldersDir).toAbsolutePath());
             }
         } finally {
             // Clean up ThreadLocal to prevent memory leaks
@@ -230,7 +233,7 @@ public class PipelineDirectoryProcessor {
             throws IOException {
 
         List<String> inputExtensions =
-                apiDocService.getExtensionTypes(false, operation.getOperation());
+                toolMetadataService.getExtensionTypes(false, operation.getOperation());
         log.info(
                 "Allowed extensions for operation {}: {}",
                 operation.getOperation(),
@@ -254,7 +257,7 @@ public class PipelineDirectoryProcessor {
                                         String extension =
                                                 filename.contains(".")
                                                         ? filename.substring(
-                                                                        filename.lastIndexOf(".")
+                                                                        filename.lastIndexOf('.')
                                                                                 + 1)
                                                                 .toLowerCase(Locale.ROOT)
                                                         : "";
@@ -273,19 +276,20 @@ public class PipelineDirectoryProcessor {
                                         }
                                         return isAllowed;
                                     })
-                            .map(Path::toAbsolutePath)
                             .filter(
                                     path -> {
-                                        boolean isReady =
-                                                fileMonitor.isFileReadyForProcessing(path);
-                                        if (!isReady) {
+                                        if (!fileReadinessChecker.isReady(path)) {
                                             log.info(
-                                                    "File not ready for processing (locked/created"
-                                                            + " last 5s): {}",
-                                                    path);
+                                                    "File '{}' is not yet ready for processing"
+                                                            + " (still being written or locked),"
+                                                            + " will retry on next scan cycle",
+                                                    path.getFileName());
+                                            return false;
                                         }
-                                        return isReady;
+                                        return true;
                                     })
+                            .map(Path::toAbsolutePath)
+                            .filter(path -> true)
                             .map(Path::toFile)
                             .toArray(File[]::new);
             log.info(
@@ -441,7 +445,7 @@ public class PipelineDirectoryProcessor {
                                         .replace("{outputFolder}", finishedFoldersDir)
                                         .replace("{folderName}", dir.toString()))
                         .replaceAll("");
-        return Paths.get(outputDir).isAbsolute() ? Paths.get(outputDir) : Paths.get(".", outputDir);
+        return Path.of(outputDir).isAbsolute() ? Path.of(outputDir) : Path.of(".", outputDir);
     }
 
     private void deleteOriginalFiles(List<File> filesToProcess, Path processingDir)
