@@ -248,24 +248,39 @@ public class PdfJsonConversionService {
         }
     }
 
-    public byte[] convertPdfToJson(MultipartFile file) throws IOException {
-        return convertPdfToJson(file, null, false);
+    public void convertPdfToJson(MultipartFile file, OutputStream out) throws IOException {
+        convertPdfToJson(file, null, false, out);
     }
 
-    public byte[] convertPdfToJson(MultipartFile file, boolean lightweight) throws IOException {
-        return convertPdfToJson(file, null, lightweight);
+    /**
+     * Converts a PDF to the editable {@link PdfJsonDocument} model. Convenience wrapper around
+     * {@link #convertPdfToJson(MultipartFile, OutputStream)} for callers that need to inspect or
+     * mutate the document in memory before round-tripping it back to PDF.
+     */
+    public PdfJsonDocument convertPdfToJsonDocument(MultipartFile file) throws IOException {
+        ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+        convertPdfToJson(file, null, false, buffer);
+        return objectMapper.readValue(buffer.toByteArray(), PdfJsonDocument.class);
     }
 
-    public byte[] convertPdfToJson(
-            MultipartFile file, Consumer<PdfJsonConversionProgress> progressCallback)
+    public void convertPdfToJson(MultipartFile file, boolean lightweight, OutputStream out)
             throws IOException {
-        return convertPdfToJson(file, progressCallback, false);
+        convertPdfToJson(file, null, lightweight, out);
     }
 
-    public byte[] convertPdfToJson(
+    public void convertPdfToJson(
             MultipartFile file,
             Consumer<PdfJsonConversionProgress> progressCallback,
-            boolean lightweight)
+            OutputStream out)
+            throws IOException {
+        convertPdfToJson(file, progressCallback, false, out);
+    }
+
+    public void convertPdfToJson(
+            MultipartFile file,
+            Consumer<PdfJsonConversionProgress> progressCallback,
+            boolean lightweight,
+            OutputStream out)
             throws IOException {
         if (file == null) {
             throw ExceptionUtils.createNullArgumentException("fileInput");
@@ -273,11 +288,11 @@ public class PdfJsonConversionService {
 
         // Get job ID from request context if running in async mode
         String contextJobId = getJobIdFromRequest();
-        boolean isRealJobId = (contextJobId != null && !contextJobId.isEmpty());
+        boolean useLazyImages = (contextJobId != null && !contextJobId.isEmpty());
 
         // Generate synthetic jobId for synchronous conversions to prevent cache collisions
         final String jobId;
-        if (!isRealJobId) {
+        if (!useLazyImages) {
             jobId = "pdf2json:" + java.util.UUID.randomUUID().toString();
             log.debug("Generated synthetic jobId for synchronous conversion: {}", jobId);
         } else {
@@ -302,7 +317,7 @@ public class PdfJsonConversionService {
                                             : "");
                             progressCallback.accept(p);
                         }
-                        : isRealJobId
+                        : useLazyImages
                                 ? (p) -> {
                                     log.debug(
                                             "Progress: [{}%] {} - {}{}",
@@ -369,7 +384,6 @@ public class PdfJsonConversionService {
                 int totalPages = document.getNumberOfPages();
                 // Always enable lazy mode for real async jobs so cache is available regardless of
                 // page count. Synchronous calls with synthetic jobId still do full extraction.
-                boolean useLazyImages = isRealJobId;
                 Map<COSBase, FontModelCacheEntry> fontCache = new IdentityHashMap<>();
                 Map<COSBase, EncodedImage> imageCache = new IdentityHashMap<>();
                 log.debug(
@@ -377,7 +391,7 @@ public class PdfJsonConversionService {
                         totalPages,
                         useLazyImages ? "lazy image" : "standard",
                         jobId,
-                        isRealJobId);
+                        useLazyImages);
                 Map<String, PdfJsonFont> fonts = new LinkedHashMap<>();
                 Map<Integer, List<PdfJsonTextElement>> textByPage = new LinkedHashMap<>();
                 Map<Integer, Map<PDFont, String>> pageFontResources = new HashMap<>();
@@ -431,7 +445,7 @@ public class PdfJsonConversionService {
                 progress.accept(
                         PdfJsonConversionProgress.of(
                                 80, "annotations", "Collecting annotations and form fields"));
-                boolean includeAnnotationRawData = !(lightweight && isRealJobId);
+                boolean includeAnnotationRawData = !(lightweight && useLazyImages);
                 Map<Integer, List<PdfJsonAnnotation>> annotationsByPage =
                         collectAnnotations(
                                 document, totalPages, progress, includeAnnotationRawData);
@@ -463,8 +477,8 @@ public class PdfJsonConversionService {
                                 textByPage,
                                 imagesByPage,
                                 annotationsByPage,
-                                lightweight && isRealJobId));
-                if (lightweight && isRealJobId) {
+                                lightweight && useLazyImages));
+                if (lightweight && useLazyImages) {
                     // Lightweight async editor flow does not use form fields and this payload can
                     // be
                     // very large due nested raw dictionaries.
@@ -474,12 +488,11 @@ public class PdfJsonConversionService {
                 }
 
                 // Only cache for real async jobIds, not synthetic synchronous ones
-                if (useLazyImages && isRealJobId) {
+                if (useLazyImages) {
                     log.debug(
-                            "Creating cache for jobId: {} (useLazyImages={}, isRealJobId={})",
+                            "Creating cache for jobId: {} (useLazyImages={})",
                             jobId,
-                            useLazyImages,
-                            isRealJobId);
+                            useLazyImages);
                     PdfJsonDocumentMetadata docMetadata = new PdfJsonDocumentMetadata();
                     docMetadata.setMetadata(pdfJson.getMetadata());
                     docMetadata.setXmpMetadata(pdfJson.getXmpMetadata());
@@ -529,16 +542,15 @@ public class PdfJsonConversionService {
                     scheduleDocumentCleanup(jobId);
                 } else {
                     log.warn(
-                            "Skipping cache creation: useLazyImages={}, isRealJobId={}, jobId={}",
+                            "Skipping cache creation: useLazyImages={}, jobId={}",
                             useLazyImages,
-                            isRealJobId,
                             jobId);
                 }
 
                 if (lightweight) {
                     applyLightweightTransformations(pdfJson);
                 }
-                if (lightweight && isRealJobId) {
+                if (lightweight && useLazyImages) {
                     stripFontProgramPayloads(responseFonts);
                     stripFontCosStreamData(responseFonts);
                 }
@@ -576,7 +588,7 @@ public class PdfJsonConversionService {
                                                             .replaceAll("");
                                             return String.format("%s (%s)", cleanName, subtype);
                                         })
-                                .collect(java.util.stream.Collectors.toList());
+                                .toList();
                 long type3Fonts =
                         responseFonts.stream().filter(f -> "Type3".equals(f.getSubtype())).count();
 
@@ -596,7 +608,9 @@ public class PdfJsonConversionService {
                             pdfJson.getPages().size());
                 }
 
-                byte[] result = objectMapper.writeValueAsBytes(pdfJson);
+                // Stream JSON directly to the caller's OutputStream to avoid allocating the
+                // entire document on the heap before writing it out.
+                objectMapper.writeValue(out, pdfJson);
                 progress.accept(PdfJsonConversionProgress.complete());
 
                 // Clear Type3 cache entries immediately for non-cached conversions
@@ -605,20 +619,25 @@ public class PdfJsonConversionService {
                 if (!useLazyImages) {
                     clearType3CacheEntriesForJob(jobId);
                 }
-
-                return result;
             }
         } finally {
             closeQuietly(normalizedFile);
         }
     }
 
-    public byte[] convertJsonToPdf(MultipartFile file) throws IOException {
+    public void convertJsonToPdf(MultipartFile file, OutputStream out) throws IOException {
         if (file == null) {
             throw ExceptionUtils.createNullArgumentException("fileInput");
         }
         byte[] jsonBytes = file.getBytes();
         PdfJsonDocument pdfJson = objectMapper.readValue(jsonBytes, PdfJsonDocument.class);
+        convertJsonToPdf(pdfJson, out);
+    }
+
+    public void convertJsonToPdf(PdfJsonDocument pdfJson, OutputStream out) throws IOException {
+        if (pdfJson == null) {
+            throw ExceptionUtils.createNullArgumentException("document");
+        }
 
         List<PdfJsonFont> fontModels = pdfJson.getFonts();
         if (fontModels == null) {
@@ -807,15 +826,11 @@ public class PdfJsonConversionService {
                 log.info("JSON->PDF conversion complete: {} pages", pages.size());
             }
 
-            try (ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
-                document.save(baos);
-                byte[] result = baos.toByteArray();
+            // Stream the PDF directly to the caller's OutputStream — PDFBox writes incrementally.
+            document.save(out);
 
-                // Clear Type3 cache entries for this conversion
-                clearType3CacheEntriesForJob(syntheticJobId);
-
-                return result;
-            }
+            // Clear Type3 cache entries for this conversion
+            clearType3CacheEntriesForJob(syntheticJobId);
         }
     }
 
@@ -1539,7 +1554,7 @@ public class PdfJsonConversionService {
                                                                 .glyphName(outline.getGlyphName())
                                                                 .unicode(outline.getUnicode())
                                                                 .build())
-                                        .collect(Collectors.toList());
+                                        .toList();
                     }
                 } catch (Exception ex) {
                     log.debug(
@@ -2079,14 +2094,29 @@ public class PdfJsonConversionService {
             byte[] toUnicodeBytes = Base64.getDecoder().decode(toUnicodeBase64);
             String toUnicodeStr = new String(toUnicodeBytes, StandardCharsets.UTF_8);
 
-            // Parse ToUnicode CMap for bfchar and bfrange
+            // Parse ToUnicode CMap for bfchar and bfrange. Both sides go through
+            // parseToUnicodeCodepoint so an 8-hex-char surrogate-pair value on either side
+            // (e.g. "D837DF0E") is decoded as a single supplementary codepoint instead of
+            // overflowing Integer.parseInt and aborting the whole mapping build.
             java.util.regex.Pattern bfcharPattern =
                     java.util.regex.Pattern.compile("<([0-9A-Fa-f]+)>\\s*<([0-9A-Fa-f]+)>");
             java.util.regex.Matcher matcher = bfcharPattern.matcher(toUnicodeStr);
             while (matcher.find()) {
-                int charCode = Integer.parseInt(matcher.group(1), 16);
-                int unicode = Integer.parseInt(matcher.group(2), 16);
-                charCodeToUnicode.put(charCode, unicode);
+                try {
+                    int charCode = parseToUnicodeCodepoint(matcher.group(1));
+                    int unicode = parseToUnicodeCodepoint(matcher.group(2));
+                    charCodeToUnicode.put(charCode, unicode);
+                } catch (NumberFormatException entryEx) {
+                    // Tolerate a single malformed entry: log and skip rather than aborting the
+                    // entire ToUnicode CMap (which would force the whole font onto the slow
+                    // raw-bytes fallback path).
+                    log.debug(
+                            "Skipping malformed ToUnicode entry <{}> <{}> in font {}: {}",
+                            matcher.group(1),
+                            matcher.group(2),
+                            font.getName(),
+                            entryEx.getMessage());
+                }
             }
 
             // Build JSON mapping: CharCode → CID → GID → Unicode
@@ -2137,6 +2167,42 @@ public class PdfJsonConversionService {
                     e.getMessage());
             return toUnicodeBase64; // Fall back to raw ToUnicode
         }
+    }
+
+    /**
+     * Parse a hex string from a PDF ToUnicode CMap into a single Unicode codepoint. Handles three
+     * cases: a single BMP code unit (4 hex chars), a UTF-16 surrogate pair encoding a supplementary
+     * codepoint above U+FFFF (8 hex chars, e.g. {@code D837DF0E} for U+1F40E), and multi-codepoint
+     * mappings (longer; returns the first codepoint as a best-effort representative).
+     *
+     * <p>Without this, {@code Integer.parseInt("D837DF0E", 16)} overflows because the value is ~3.6
+     * billion, throwing {@link NumberFormatException} and forcing the conversion to fall back to a
+     * raw ToUnicode payload that the JSON&rarr;PDF rebuild then fails to use efficiently.
+     */
+    static int parseToUnicodeCodepoint(String hex) {
+        if (hex == null || hex.isEmpty()) {
+            throw new NumberFormatException("Empty ToUnicode hex value");
+        }
+        if (hex.length() <= 4) {
+            return Integer.parseInt(hex, 16);
+        }
+        // Treat the hex string as UTF-16BE: pairs of hex digits form bytes, four hex digits form
+        // one UTF-16 code unit. The PDF ToUnicode CMap convention requires an even number of bytes
+        // (i.e. a multiple of four hex characters) for multi-unit values.
+        if (hex.length() % 4 != 0) {
+            throw new NumberFormatException(
+                    "ToUnicode hex value not a multiple of 4 chars: " + hex);
+        }
+        int unitCount = hex.length() / 4;
+        char[] units = new char[unitCount];
+        for (int i = 0; i < unitCount; i++) {
+            units[i] = (char) Integer.parseInt(hex.substring(i * 4, i * 4 + 4), 16);
+        }
+        // codePointAt assembles a surrogate pair into a supplementary codepoint when the
+        // high/low surrogates appear in sequence; for any other multi-unit sequence it returns
+        // the first BMP codepoint, which is the right best-effort fallback for ligature
+        // decompositions (one charCode -> several Unicode chars).
+        return new String(units).codePointAt(0);
     }
 
     private PdfJsonFontCidSystemInfo extractCidSystemInfo(COSDictionary fontDictionary) {
@@ -2503,11 +2569,12 @@ public class PdfJsonConversionService {
                     PDRectangle rect = annotation.getRectangle();
                     if (rect != null) {
                         ann.setRect(
-                                List.of(
-                                        rect.getLowerLeftX(),
-                                        rect.getLowerLeftY(),
-                                        rect.getUpperRightX(),
-                                        rect.getUpperRightY()));
+                                new float[] {
+                                    rect.getLowerLeftX(),
+                                    rect.getLowerLeftY(),
+                                    rect.getUpperRightX(),
+                                    rect.getUpperRightY()
+                                });
                     }
 
                     COSName appearanceState = annotation.getAppearanceState();
@@ -2516,12 +2583,7 @@ public class PdfJsonConversionService {
                     }
 
                     if (annotation.getColor() != null) {
-                        float[] colorComponents = annotation.getColor().getComponents();
-                        List<Float> colorList = new ArrayList<>(colorComponents.length);
-                        for (float c : colorComponents) {
-                            colorList.add(c);
-                        }
-                        ann.setColor(colorList);
+                        ann.setColor(annotation.getColor().getComponents());
                     }
 
                     COSDictionary annotDict = annotation.getCOSObject();
@@ -2626,7 +2688,7 @@ public class PdfJsonConversionService {
 
                     // Find which page the field is on
                     PDAnnotationWidget widget =
-                            field.getWidgets().isEmpty() ? null : field.getWidgets().get(0);
+                            field.getWidgets().isEmpty() ? null : field.getWidgets().getFirst();
                     if (widget != null) {
                         PDPage fieldPage = widget.getPage();
                         if (fieldPage != null) {
@@ -2636,11 +2698,12 @@ public class PdfJsonConversionService {
                             PDRectangle rect = widget.getRectangle();
                             if (rect != null) {
                                 formField.setRect(
-                                        List.of(
-                                                rect.getLowerLeftX(),
-                                                rect.getLowerLeftY(),
-                                                rect.getUpperRightX(),
-                                                rect.getUpperRightY()));
+                                        new float[] {
+                                            rect.getLowerLeftX(),
+                                            rect.getLowerLeftY(),
+                                            rect.getUpperRightX(),
+                                            rect.getUpperRightY()
+                                        });
                             }
                         }
                     }
@@ -3101,7 +3164,7 @@ public class PdfJsonConversionService {
                         && imageObjectNames != null
                         && !imageObjectNames.isEmpty()
                         && !targetTokens.isEmpty()) {
-                    Object previous = targetTokens.get(targetTokens.size() - 1);
+                    Object previous = targetTokens.getLast();
                     if (previous instanceof COSName cosName
                             && imageObjectNames.contains(cosName.getName())) {
                         targetTokens.remove(targetTokens.size() - 1);
@@ -3351,7 +3414,7 @@ public class PdfJsonConversionService {
         PDFont currentFont = baseFont;
         String currentFontId = baseFontId;
 
-        List<Integer> elementCodes = element.getCharCodes();
+        int[] elementCodes = element.getCharCodes();
         int codeIndex = 0;
         boolean rawType3CodesUsed = false;
         int rawType3GlyphCount = 0;
@@ -3363,8 +3426,8 @@ public class PdfJsonConversionService {
             PDFont targetFont = baseFont;
             String targetFontId = baseFontId;
             Integer rawCode = null;
-            if (elementCodes != null && codeIndex < elementCodes.size()) {
-                rawCode = elementCodes.get(codeIndex);
+            if (elementCodes != null && codeIndex < elementCodes.length) {
+                rawCode = elementCodes[codeIndex];
             }
             codeIndex++;
 
@@ -3667,10 +3730,7 @@ public class PdfJsonConversionService {
         if (color == null || color.getComponents() == null) {
             return;
         }
-        float[] components = new float[color.getComponents().size()];
-        for (int i = 0; i < components.length; i++) {
-            components[i] = color.getComponents().get(i);
-        }
+        float[] components = color.getComponents();
         String space = color.getColorSpace();
         if (space == null) {
             // Infer color space from component count
@@ -4265,12 +4325,8 @@ public class PdfJsonConversionService {
             return 0;
         }
         if (font != null) {
-            try (InputStream inputStream = new ByteArrayInputStream(value.getBytes())) {
-                int count = 0;
-                int code;
-                while ((code = font.readCode(inputStream)) != -1) {
-                    count++;
-                }
+            try (ByteArrayInputStream inputStream = new ByteArrayInputStream(value.getBytes())) {
+                int count = countCodesProtected(inputStream, font::readCode);
                 if (count > 0) {
                     return count;
                 }
@@ -4282,13 +4338,59 @@ public class PdfJsonConversionService {
         return Math.max(1, bytes.length);
     }
 
+    /**
+     * Functional accessor for {@link PDFont#readCode(InputStream)} so the bounded counting loop can
+     * be exercised in isolation without instantiating a {@link PDFont}.
+     */
+    @FunctionalInterface
+    interface CodeReader {
+        int readCode(InputStream stream) throws IOException;
+    }
+
+    /**
+     * Count how many codes the supplied {@code reader} can extract from {@code inputStream}, with
+     * two safety nets that PDFBox's raw {@link PDFont#readCode(InputStream)} loop lacks:
+     *
+     * <ol>
+     *   <li>Stop when the stream is empty (a corrupt CMap can otherwise loop forever returning
+     *       successfully-matched zero-bytes from an exhausted {@link ByteArrayInputStream}).
+     *   <li>Stop when a {@code readCode} call did not consume any bytes, even if it returned a
+     *       non-{@code -1} value.
+     * </ol>
+     *
+     * <p>Both conditions were observed in the wild on round-tripped fallback fonts where the
+     * embedded ToUnicode CMap matched 0x00 sequences, hanging the JSON&rarr;PDF rebuild.
+     */
+    static int countCodesProtected(ByteArrayInputStream inputStream, CodeReader reader)
+            throws IOException {
+        int count = 0;
+        int previousAvailable = inputStream.available();
+        while (previousAvailable > 0) {
+            int code = reader.readCode(inputStream);
+            if (code == -1) {
+                break;
+            }
+            int currentAvailable = inputStream.available();
+            if (currentAvailable >= previousAvailable) {
+                // No progress made; break to avoid infinite loop on corrupt CMaps.
+                break;
+            }
+            count++;
+            previousAvailable = currentAvailable;
+        }
+        return count;
+    }
+
     private MergedText mergeText(List<PdfJsonTextElement> elements) {
         StringBuilder builder = new StringBuilder();
         List<Integer> combinedCodes = new ArrayList<>();
         for (PdfJsonTextElement element : elements) {
             builder.append(Objects.toString(element.getText(), ""));
-            if (element.getCharCodes() != null && !element.getCharCodes().isEmpty()) {
-                combinedCodes.addAll(element.getCharCodes());
+            int[] codes = element.getCharCodes();
+            if (codes != null && codes.length > 0) {
+                for (int code : codes) {
+                    combinedCodes.add(code);
+                }
             }
         }
         return new MergedText(builder.toString(), combinedCodes.isEmpty() ? null : combinedCodes);
@@ -4354,9 +4456,9 @@ public class PdfJsonConversionService {
         }
 
         private int countGlyphs(PdfJsonTextElement element) {
-            List<Integer> codes = element.getCharCodes();
-            if (codes != null && !codes.isEmpty()) {
-                return codes.size();
+            int[] codes = element.getCharCodes();
+            if (codes != null && codes.length > 0) {
+                return codes.length;
             }
             String text = element.getText();
             if (text != null && !text.isEmpty()) {
@@ -4920,15 +5022,15 @@ public class PdfJsonConversionService {
 
     private void applyTextMatrix(PDPageContentStream contentStream, PdfJsonTextElement element)
             throws IOException {
-        List<Float> matrix = element.getTextMatrix();
-        if (matrix != null && matrix.size() == 6) {
+        float[] matrix = element.getTextMatrix();
+        if (matrix != null && matrix.length == 6) {
             float fontScale = resolveFontMatrixSize(element);
-            float a = matrix.get(0);
-            float b = matrix.get(1);
-            float c = matrix.get(2);
-            float d = matrix.get(3);
-            float e = matrix.get(4);
-            float f = matrix.get(5);
+            float a = matrix[0];
+            float b = matrix[1];
+            float c = matrix[2];
+            float d = matrix[3];
+            float e = matrix[4];
+            float f = matrix[5];
 
             if (fontScale != 0f) {
                 a /= fontScale;
@@ -4950,12 +5052,12 @@ public class PdfJsonConversionService {
         if (fromElement != null && fromElement > 0f) {
             return fromElement;
         }
-        List<Float> matrix = element.getTextMatrix();
-        if (matrix != null && matrix.size() >= 4) {
-            float a = matrix.get(0);
-            float b = matrix.get(1);
-            float c = matrix.get(2);
-            float d = matrix.get(3);
+        float[] matrix = element.getTextMatrix();
+        if (matrix != null && matrix.length >= 4) {
+            float a = matrix[0];
+            float b = matrix[1];
+            float c = matrix[2];
+            float d = matrix[3];
             float verticalScale = (float) Math.hypot(b, d);
             if (verticalScale > 0f) {
                 return verticalScale;
@@ -5048,7 +5150,7 @@ public class PdfJsonConversionService {
             }
             Matrix ctm = getGraphicsState().getCurrentTransformationMatrix();
             Bounds bounds = computeBounds(ctm);
-            List<Float> matrixValues = toMatrixValues(ctm);
+            float[] matrixValues = toMatrixValues(ctm);
 
             PdfJsonImageElement element =
                     PdfJsonImageElement.builder()
@@ -5144,7 +5246,7 @@ public class PdfJsonConversionService {
                 throws IOException {
             if (OperatorName.DRAW_OBJECT.equals(operator.getName())
                     && !operands.isEmpty()
-                    && operands.get(0) instanceof COSName name) {
+                    && operands.getFirst() instanceof COSName name) {
                 currentXObjectName = name;
             }
             super.processOperator(operator, operands);
@@ -5222,15 +5324,15 @@ public class PdfJsonConversionService {
 
     private record EncodedImage(String base64, String format) {}
 
-    private List<Float> toMatrixValues(Matrix matrix) {
-        List<Float> values = new ArrayList<>(6);
-        values.add(matrix.getValue(0, 0));
-        values.add(matrix.getValue(0, 1));
-        values.add(matrix.getValue(1, 0));
-        values.add(matrix.getValue(1, 1));
-        values.add(matrix.getValue(2, 0));
-        values.add(matrix.getValue(2, 1));
-        return values;
+    private float[] toMatrixValues(Matrix matrix) {
+        return new float[] {
+            matrix.getValue(0, 0),
+            matrix.getValue(0, 1),
+            matrix.getValue(1, 0),
+            matrix.getValue(1, 1),
+            matrix.getValue(2, 0),
+            matrix.getValue(2, 1)
+        };
     }
 
     private EncodedImage encodeImage(PDImage image) {
@@ -5341,16 +5443,16 @@ public class PdfJsonConversionService {
             cache.put(cacheKey, image);
         }
 
-        List<Float> transform = element.getTransform();
-        if (transform != null && transform.size() == 6) {
+        float[] transform = element.getTransform();
+        if (transform != null && transform.length == 6) {
             Matrix matrix =
                     new Matrix(
-                            safeFloat(transform.get(0), 1f),
-                            safeFloat(transform.get(1), 0f),
-                            safeFloat(transform.get(2), 0f),
-                            safeFloat(transform.get(3), 1f),
-                            safeFloat(transform.get(4), 0f),
-                            safeFloat(transform.get(5), 0f));
+                            safeFloat(transform[0], 1f),
+                            safeFloat(transform[1], 0f),
+                            safeFloat(transform[2], 0f),
+                            safeFloat(transform[3], 1f),
+                            safeFloat(transform[4], 0f),
+                            safeFloat(transform[5], 0f));
             contentStream.drawImage(image, matrix);
             return;
         }
@@ -5516,14 +5618,17 @@ public class PdfJsonConversionService {
             if (pdfont instanceof PDType3Font) {
                 int[] codes = position.getCharacterCodes();
                 if (codes != null && codes.length > 0) {
-                    List<Integer> codeList = new ArrayList<>(codes.length);
+                    int count = 0;
                     for (int code : codes) {
-                        if (code >= 0) {
-                            codeList.add(code);
-                        }
+                        if (code >= 0) count++;
                     }
-                    if (!codeList.isEmpty()) {
-                        element.setCharCodes(codeList);
+                    if (count > 0) {
+                        int[] filtered = new int[count];
+                        int idx = 0;
+                        for (int code : codes) {
+                            if (code >= 0) filtered[idx++] = code;
+                        }
+                        element.setCharCodes(filtered);
                     }
                 }
             }
@@ -5552,11 +5657,11 @@ public class PdfJsonConversionService {
                 return;
             }
 
-            List<Float> matrix = element.getTextMatrix();
+            float[] matrix = element.getTextMatrix();
             if (matrix != null) {
-                if (matrix.isEmpty()) {
+                if (matrix.length == 0) {
                     element.setTextMatrix(null);
-                } else if (matrix.size() == 6) {
+                } else if (matrix.length == 6) {
                     element.setX(null);
                     element.setY(null);
                 }
@@ -5597,29 +5702,29 @@ public class PdfJsonConversionService {
             if (color == null || color.getComponents() == null) {
                 return true;
             }
-            List<Float> components = color.getComponents();
-            if (components.isEmpty()) {
+            float[] components = color.getComponents();
+            if (components.length == 0) {
                 return true;
             }
             String space = color.getColorSpace();
             if (space == null || "DeviceRGB".equals(space)) {
-                if (components.size() < 3) {
+                if (components.length < 3) {
                     return false;
                 }
-                return Math.abs(components.get(0)) < FLOAT_EPSILON
-                        && Math.abs(components.get(1)) < FLOAT_EPSILON
-                        && Math.abs(components.get(2)) < FLOAT_EPSILON;
+                return Math.abs(components[0]) < FLOAT_EPSILON
+                        && Math.abs(components[1]) < FLOAT_EPSILON
+                        && Math.abs(components[2]) < FLOAT_EPSILON;
             }
             if ("DeviceGray".equals(space)) {
-                return Math.abs(components.get(0)) < FLOAT_EPSILON;
+                return Math.abs(components[0]) < FLOAT_EPSILON;
             }
             return false;
         }
 
         private Float baselineFrom(PdfJsonTextElement element) {
-            List<Float> matrix = element.getTextMatrix();
-            if (matrix != null && matrix.size() >= 6) {
-                return matrix.get(5);
+            float[] matrix = element.getTextMatrix();
+            if (matrix != null && matrix.length >= 6) {
+                return matrix[5];
             }
             return element.getY();
         }
@@ -5648,11 +5753,12 @@ public class PdfJsonConversionService {
             private final float orientationC;
             private final float orientationD;
             private final Float baseline;
-            private final List<Float> baseMatrix;
+            private final float[] baseMatrix;
             private final float startXCoord;
             private final float startYCoord;
             private final StringBuilder textBuilder = new StringBuilder();
-            private final List<Integer> charCodeBuffer = new ArrayList<>();
+            private int[] charCodeBuf = new int[16];
+            private int charCodeLen = 0;
             private float totalWidth;
             private float maxHeight;
             private float endXCoord;
@@ -5660,17 +5766,15 @@ public class PdfJsonConversionService {
             TextRunAccumulator(PdfJsonTextElement element, TextPosition position) {
                 this.baseElement = element;
                 this.styleKey = buildStyleKey(element);
-                this.baseMatrix =
-                        element.getTextMatrix() != null
-                                ? new ArrayList<>(element.getTextMatrix())
-                                : null;
-                if (baseMatrix != null && baseMatrix.size() >= 6) {
-                    orientationA = baseMatrix.get(0);
-                    orientationB = baseMatrix.get(1);
-                    orientationC = baseMatrix.get(2);
-                    orientationD = baseMatrix.get(3);
-                    startXCoord = baseMatrix.get(4);
-                    startYCoord = baseMatrix.get(5);
+                float[] tm = element.getTextMatrix();
+                this.baseMatrix = tm != null ? tm.clone() : null;
+                if (baseMatrix != null && baseMatrix.length >= 6) {
+                    orientationA = baseMatrix[0];
+                    orientationB = baseMatrix[1];
+                    orientationC = baseMatrix[2];
+                    orientationD = baseMatrix[3];
+                    startXCoord = baseMatrix[4];
+                    startYCoord = baseMatrix[5];
                 } else {
                     orientationA = 1f;
                     orientationB = 0f;
@@ -5684,25 +5788,23 @@ public class PdfJsonConversionService {
                 this.maxHeight = element.getHeight() != null ? element.getHeight() : 0f;
                 this.endXCoord = position.getXDirAdj() + position.getWidthDirAdj();
                 this.textBuilder.append(element.getText());
-                if (element.getCharCodes() != null) {
-                    charCodeBuffer.addAll(element.getCharCodes());
-                }
+                appendCharCodes(element.getCharCodes());
             }
 
             boolean canAppend(PdfJsonTextElement element, TextPosition position) {
                 if (!styleKey.equals(buildStyleKey(element))) {
                     return false;
                 }
-                List<Float> matrix = element.getTextMatrix();
+                float[] matrix = element.getTextMatrix();
                 float a = 1f;
                 float b = 0f;
                 float c = 0f;
                 float d = 1f;
-                if (matrix != null && matrix.size() >= 4) {
-                    a = matrix.get(0);
-                    b = matrix.get(1);
-                    c = matrix.get(2);
-                    d = matrix.get(3);
+                if (matrix != null && matrix.length >= 4) {
+                    a = matrix[0];
+                    b = matrix[1];
+                    c = matrix[2];
+                    d = matrix[3];
                 }
                 if (Math.abs(a - orientationA) > ORIENTATION_TOLERANCE
                         || Math.abs(b - orientationB) > ORIENTATION_TOLERANCE
@@ -5734,9 +5836,19 @@ public class PdfJsonConversionService {
                     maxHeight = height;
                 }
                 endXCoord = position.getXDirAdj() + position.getWidthDirAdj();
-                if (element.getCharCodes() != null) {
-                    charCodeBuffer.addAll(element.getCharCodes());
+                appendCharCodes(element.getCharCodes());
+            }
+
+            private void appendCharCodes(int[] codes) {
+                if (codes == null) return;
+                int needed = charCodeLen + codes.length;
+                if (needed > charCodeBuf.length) {
+                    charCodeBuf =
+                            java.util.Arrays.copyOf(
+                                    charCodeBuf, Math.max(needed, charCodeBuf.length * 2));
                 }
+                System.arraycopy(codes, 0, charCodeBuf, charCodeLen, codes.length);
+                charCodeLen += codes.length;
             }
 
             PdfJsonTextElement build() {
@@ -5748,22 +5860,21 @@ public class PdfJsonConversionService {
                 }
                 result.setWidth(totalWidth);
                 result.setHeight(maxHeight);
-                if (baseMatrix != null && baseMatrix.size() == 6) {
-                    List<Float> matrix = new ArrayList<>(baseMatrix);
-                    matrix.set(0, orientationA);
-                    matrix.set(1, orientationB);
-                    matrix.set(2, orientationC);
-                    matrix.set(3, orientationD);
-                    matrix.set(4, startXCoord);
-                    matrix.set(5, startYCoord);
+                if (baseMatrix != null && baseMatrix.length == 6) {
+                    float[] matrix =
+                            new float[] {
+                                orientationA, orientationB,
+                                orientationC, orientationD,
+                                startXCoord, startYCoord
+                            };
                     result.setTextMatrix(matrix);
                     result.setX(null);
                     result.setY(null);
                 }
-                if (charCodeBuffer.isEmpty()) {
+                if (charCodeLen == 0) {
                     result.setCharCodes(null);
                 } else {
-                    result.setCharCodes(new ArrayList<>(charCodeBuffer));
+                    result.setCharCodes(java.util.Arrays.copyOf(charCodeBuf, charCodeLen));
                 }
                 compactTextElement(result);
                 return result;
@@ -5784,29 +5895,25 @@ public class PdfJsonConversionService {
                 Integer renderingMode,
                 Float spaceWidth) {}
 
-        private List<Float> extractMatrix(TextPosition position) {
-            float[] values = new float[6];
-            values[0] = position.getTextMatrix().getValue(0, 0);
-            values[1] = position.getTextMatrix().getValue(0, 1);
-            values[2] = position.getTextMatrix().getValue(1, 0);
-            values[3] = position.getTextMatrix().getValue(1, 1);
-            values[4] = position.getTextMatrix().getValue(2, 0);
-            values[5] = position.getTextMatrix().getValue(2, 1);
-            List<Float> matrix = new ArrayList<>(6);
-            for (float value : values) {
-                matrix.add(value);
-            }
-            return matrix;
+        private float[] extractMatrix(TextPosition position) {
+            return new float[] {
+                position.getTextMatrix().getValue(0, 0),
+                position.getTextMatrix().getValue(0, 1),
+                position.getTextMatrix().getValue(1, 0),
+                position.getTextMatrix().getValue(1, 1),
+                position.getTextMatrix().getValue(2, 0),
+                position.getTextMatrix().getValue(2, 1)
+            };
         }
 
-        private Float computeFontMatrixSize(List<Float> matrix) {
-            if (matrix == null || matrix.size() < 4) {
+        private Float computeFontMatrixSize(float[] matrix) {
+            if (matrix == null || matrix.length < 4) {
                 return null;
             }
-            float a = matrix.get(0);
-            float b = matrix.get(1);
-            float c = matrix.get(2);
-            float d = matrix.get(3);
+            float a = matrix[0];
+            float b = matrix[1];
+            float c = matrix[2];
+            float d = matrix[3];
             float scaleX = (float) Math.hypot(a, c);
             float scaleY = (float) Math.hypot(b, d);
             float scale = Math.max(scaleX, scaleY);
@@ -5850,11 +5957,10 @@ public class PdfJsonConversionService {
                         colorSpaceName,
                         ex.getMessage());
             }
-            List<Float> values = new ArrayList<>(effective.length);
-            for (float component : effective) {
-                values.add(component);
-            }
-            return PdfJsonTextColor.builder().colorSpace(colorSpaceName).components(values).build();
+            return PdfJsonTextColor.builder()
+                    .colorSpace(colorSpaceName)
+                    .components(effective)
+                    .build();
         }
 
         private String sanitizeForLog(String value) {
@@ -6077,7 +6183,8 @@ public class PdfJsonConversionService {
      * Extracts document metadata, fonts, and page dimensions without page content. Caches the PDF
      * bytes for subsequent page requests.
      */
-    public byte[] extractDocumentMetadata(MultipartFile file, String jobId) throws IOException {
+    public void extractDocumentMetadata(MultipartFile file, String jobId, OutputStream out)
+            throws IOException {
         if (file == null) {
             throw ExceptionUtils.createNullArgumentException("fileInput");
         }
@@ -6172,12 +6279,13 @@ public class PdfJsonConversionService {
             progress.accept(
                     PdfJsonConversionProgress.of(100, "complete", "Metadata extraction complete"));
 
-            return objectMapper.writeValueAsBytes(docMetadata);
+            objectMapper.writeValue(out, docMetadata);
         }
     }
 
     /** Extracts a single page from cached PDF bytes. Re-loads the PDF for each request. */
-    public byte[] extractSinglePage(String jobId, int pageNumber) throws IOException {
+    public void extractSinglePage(String jobId, int pageNumber, OutputStream out)
+            throws IOException {
         CachedPdfDocument cached = getCachedDocument(jobId);
         if (cached == null) {
             throw new stirling.software.SPDF.exception.CacheUnavailableException(
@@ -6241,11 +6349,12 @@ public class PdfJsonConversionService {
                     PDRectangle rect = annotation.getRectangle();
                     if (rect != null) {
                         ann.setRect(
-                                List.of(
-                                        rect.getLowerLeftX(),
-                                        rect.getLowerLeftY(),
-                                        rect.getUpperRightX(),
-                                        rect.getUpperRightY()));
+                                new float[] {
+                                    rect.getLowerLeftX(),
+                                    rect.getLowerLeftY(),
+                                    rect.getUpperRightX(),
+                                    rect.getUpperRightY()
+                                });
                     }
 
                     COSName appearanceState = annotation.getAppearanceState();
@@ -6254,12 +6363,7 @@ public class PdfJsonConversionService {
                     }
 
                     if (annotation.getColor() != null) {
-                        float[] colorComponents = annotation.getColor().getComponents();
-                        List<Float> colorList = new ArrayList<>(colorComponents.length);
-                        for (float c : colorComponents) {
-                            colorList.add(c);
-                        }
-                        ann.setColor(colorList);
+                        ann.setColor(annotation.getColor().getComponents());
                     }
 
                     COSDictionary annotDict = annotation.getCOSObject();
@@ -6332,11 +6436,12 @@ public class PdfJsonConversionService {
                     pageModel.getAnnotations().size(),
                     jobId);
 
-            return objectMapper.writeValueAsBytes(pageModel);
+            objectMapper.writeValue(out, pageModel);
         }
     }
 
-    public byte[] extractPageFonts(String jobId, int pageNumber) throws IOException {
+    public void extractPageFonts(String jobId, int pageNumber, OutputStream out)
+            throws IOException {
         CachedPdfDocument cached = getCachedDocument(jobId);
         if (cached == null) {
             throw new stirling.software.SPDF.exception.CacheUnavailableException(
@@ -6353,7 +6458,8 @@ public class PdfJsonConversionService {
         Map<PDFont, String> pageMap =
                 pageFontResources != null ? pageFontResources.get(pageNumber) : null;
         if (pageMap == null || pageMap.isEmpty()) {
-            return objectMapper.writeValueAsBytes(Collections.emptyList());
+            objectMapper.writeValue(out, Collections.emptyList());
+            return;
         }
 
         Map<String, PdfJsonFont> cachedFonts = cached.getFonts();
@@ -6381,10 +6487,11 @@ public class PdfJsonConversionService {
         pageFonts.sort(
                 Comparator.comparing(
                         PdfJsonFont::getUid, Comparator.nullsLast(Comparator.naturalOrder())));
-        return objectMapper.writeValueAsBytes(pageFonts);
+        objectMapper.writeValue(out, pageFonts);
     }
 
-    public byte[] exportUpdatedPages(String jobId, PdfJsonDocument updates) throws IOException {
+    public void exportUpdatedPages(String jobId, PdfJsonDocument updates, OutputStream outputStream)
+            throws IOException {
         if (jobId == null || jobId.isBlank()) {
             throw new IllegalArgumentException("jobId is required for incremental export");
         }
@@ -6407,7 +6514,8 @@ public class PdfJsonConversionService {
             log.debug(
                     "Incremental export requested with no page updates; returning cached PDF for jobId {}",
                     jobId);
-            return cached.getPdfBytes();
+            outputStream.write(cached.getPdfBytes());
+            return;
         }
 
         try (PDDocument document = pdfDocumentFactory.load(cached.getPdfBytes(), true)) {
@@ -6474,7 +6582,8 @@ public class PdfJsonConversionService {
                 log.debug(
                         "Incremental export for jobId {} resulted in no page updates; returning cached PDF",
                         jobId);
-                return cached.getPdfBytes();
+                outputStream.write(cached.getPdfBytes());
+                return;
             }
 
             ByteArrayOutputStream baos = new ByteArrayOutputStream();
@@ -6497,7 +6606,7 @@ public class PdfJsonConversionService {
                     "Incremental export complete for jobId {} (pages updated: {})",
                     jobId,
                     updatedPages.stream().map(i -> i + 1).sorted().toList());
-            return updatedBytes;
+            outputStream.write(updatedBytes);
         }
     }
 
